# FullBoltzmann

./: .gitignore  Cargo.toml  README.md
analysis/: Untitled.ipynb
analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: boltz.rs  main.rs  models.rs  utils.rs
src/boltz/: coupled.rs  full.rs  helper.rs  simple.rs  traits.rs
src/models/: dipole_dm.rs  scalar_singlet.rs  toy.rs
src/models/dipole_dm/: gamma.rs  sigma.rs  width.rs
src/models/scalar_singlet/: gamma.rs  sigma.rs
src/utils/: derivatives.rs  integration.rs
